docs(superpowers): refine suspend resume design
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>